# ScyPro_project

./: README.md  main.py  pyproject.toml
src/: __init__.py  masks.py  widget.py
