[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = "Простой инструмент для обработки и анализирования данных"
authors = ["bione <bionet1971@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = ">=2.0.0,<3.0.0"
requests = "^2.32.3"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
flake8-docstrings = "^1.7.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''(
    /(
        | \.git
    )/
)'''

[tool.isort]
line_length = 119
multi_line_output = 1
combine_as_imports = false

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'